syntax = "proto3";

option java_multiple_files = true;
option java_package = "GetLoggedInUser";

service GetLoggedInUserService {
  rpc GetLoggedInUser (GetLoggedInUserRequest) returns (GetLoggedInUserResponse);
}

message GetLoggedInUserRequest {
  string TOKEN = 1;
}

message GetLoggedInUserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string createdAt = 5;
  string updatedAt = 6;
}